# enterprise-real-time-data-platform

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
configs/apis/: apis.yaml
configs/environments/: dev.yaml
scripts/: test_config.py  test_download.py  test_minio_connection.py
src/enterprise_platform/ingestion/: client.py  config_loader.py  downloader.py  models.py
src/enterprise_platform/storage/: minio_client.py
